<resources>
    <string name="app_name">UserInterfaceSample</string>
    <string name="m">M</string>
    <string name="musicoo">Musicoo</string>
    <string name="login">Login</string>
    <string name="please_ente">Please enter your email address and password</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="don_t_have_">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_wi">Continue with Google</string>
    <string name="or">or</string>

</resources>